--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/keita1899/typescript-for-javascript-developers/issues"
   },
-  "homepage": "https://github.com/keita1899/typescript-for-javascript-developers#readme"
+  "homepage": "https://github.com/keita1899/typescript-for-javascript-developers#readme",
+  "devDependencies": {
+    "typescript": "^4.9.3"
+  }
 }
